have a specific home-project layout in antora-ui #109
part of update template project #108

--- a/docs/antora/supplemental-ui/partials/header-content.hbs
+++ b/docs/antora/supplemental-ui/partials/header-content.hbs
@@ -16,6 +16,9 @@
                 <div class="navbar-item">
                     <a href="https://docs.feelpp.org/">Documentation Reference</a>
                 </div>
+                <div class="navbar-item has-dropdown is-hoverable download-item">
+                    <div class="navbar-item"><a href="https://docs.feelpp.org/user/latest/install/index.html" class="download-btn">Get Feel++</a></div>
+                </div>
                 <div class="navbar-item">
                     <a class="navbar-brand"  href="https://www.cemosis.fr">
                         <img class="cemosis-logo"  src="{{{uiRootPath}}}/img/cemosis-logo.svg" alt="Cemosis logo"/>
